--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -170,7 +170,7 @@
                                     </tr>
                                     </thead>
 
-                                    <tbody></tbody>
+                                    <tbody id="tbodyAllUsersTable"></tbody>
 
                                 </table>
                             </td>
@@ -183,7 +183,8 @@
     </div>
 </div>
 
-<script src="../../static/adminPanel.js"></script>
+
+<script type="text/javascript" src="../../static/adminPanel.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
