--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -155,7 +155,7 @@
                         </tr>
                         <tr>
                             <td class="bg-white p-4">
-                                <table class="table table-borderless table-striped">
+                                <table class="table table-borderless table-striped" id="allUsersTable">
                                     <thead class="border-top border-bottom">
                                     <tr></tr>
                                     <tr class="border-top border-bottom">
@@ -170,7 +170,7 @@
                                     </tr>
                                     </thead>
 
-                                    <tbody id="tbodyAllUsersTable"></tbody>
+                                    <tbody></tbody>
 
                                 </table>
                             </td>
@@ -183,12 +183,15 @@
     </div>
 </div>
 
-
-<script type="text/javascript" src="../../static/adminPanel.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+<!--todo have to delete app/json?-->
+<!-- APP/JSON ????????????????????????????????????????????????????????????????????????????????????????????? -->
+<script type="application/json" src="../../static/adminPanel.js"></script>
+<!-- APP/JSON ????????????????????????????????????????????????????????????????????????????????????????????? -->
 
 </body>
 </html>
