JS doesnt work properly. 2 errors

--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -170,7 +170,7 @@
                                     </tr>
                                     </thead>
 
-                                    <tbody></tbody>
+                                    <tbody id="tbodyAllUsers"></tbody>
 
                                 </table>
                             </td>
@@ -187,11 +187,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
-<!--todo have to delete app/json?-->
-<!-- APP/JSON ????????????????????????????????????????????????????????????????????????????????????????????? -->
-<script type="application/json" src="../../static/adminPanel.js"></script>
-<!-- APP/JSON ????????????????????????????????????????????????????????????????????????????????????????????? -->
+<script type="application/javascript" src="../../static/admin.js"></script>
 
 </body>
 </html>
