--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -187,7 +187,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script type="application/javascript" src="../../static/admin.js"></script>
+<script src="../../static/admin.js"></script>
 
 </body>
 </html>
