JS and HTML reworked

--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -19,7 +19,8 @@
             <span class="navbar-text text-white" style="margin: auto 10px auto">
                 <strong><th:block th:each="user : ${users}" th:text="${users.getUsername()}"></th:block></strong>
                 <a>with roles: </a>
-                <th:block th:each="user : ${users.getRoles()}" th:text="${user.getRoleWithoutPrefix() + ' '}"></th:block>
+                <th:block th:each="user : ${users.getRoles()}"
+                          th:text="${user.getRoleWithoutPrefix() + ' '}"></th:block>
              </span>
 
             <!--                кнопка выхода-->
@@ -171,6 +172,112 @@
                                     </thead>
 
                                     <tbody id="tbodyAllUsers"></tbody>
+
+
+                                    <!--                                    MODAL EDIT-->
+                                    <div class="modal fade" id="edit" tabindex="-1"
+                                         aria-hidden="true">
+                                        <form th:method="PATCH" id="editForm">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title">Edit user</h5>
+                                                        <button type="button" class="btn-close"
+                                                                data-bs-dismiss="modal"
+                                                                aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>ID</b>
+                                                                    <input type="number"
+                                                                           class="form-control"
+
+                                                                           readonly>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>First name</b>
+                                                                    <input type="text"
+                                                                           class="form-control">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>Last name</b>
+                                                                    <input type="text"
+                                                                           class="form-control">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>Age</b>
+                                                                    <input type="number"
+                                                                           class="form-control">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>Username</b>
+                                                                    <input type="text"
+                                                                           class="form-control">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>Password</b>
+                                                                    <input type="text"
+                                                                           class="form-control"
+                                                                           id="password">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="row justify-content-center">
+                                                            <div class="col-6">
+                                                                <div class="text-center">
+                                                                    <b>Role</b>
+                                                                    <select multiple class="form-control" size="2"
+                                                                            name="role">
+                                                                        <option>
+
+                                                                        </option>
+                                                                    </select>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Close
+                                                        </button>
+                                                        <button type="submit" class="btn btn-primary">Edit
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+<!--                                    ENDING MODAL EDIT-->
 
                                 </table>
                             </td>
