--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -296,7 +296,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script type="text/javascript" src="admin.js"></script>
+<script type="text/javascript" src="adminPanel.js"></script>
 <script type="text/javascript" src="addNew.js"></script>
 
 </body>
