done with redirect to main admin page with users table

--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -63,9 +63,10 @@
             <div>
                 <ul class="nav nav-tabs" style="margin: 15px auto auto;">
                     <li class="nav-item">
-                        <a class="nav-link active" data-bs-toggle="tab" href="#adminpanel" role="tab">Users table</a>
+                        <button class="nav-link active" data-bs-toggle="tab" href="#adminpanel" role="tab" id="test">Users
+                            table</button>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#newuser" role="tab">New user</a>
+                        <button class="nav-link" data-bs-toggle="tab" href="#newuser" role="tab">New user</button>
                     </li>
                 </ul>
             </div>
@@ -279,7 +280,7 @@
                                             </div>
                                         </form>
                                     </div>
-<!--                                    ENDING MODAL EDIT-->
+                                    <!--                                    ENDING MODAL EDIT-->
 
                                 </table>
                             </td>
