done with navbar

--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -11,15 +11,15 @@
 
 <body style="background-color: ghostwhite">
 
-<header style="background: #404040">
+<header style="background: #404040" id="header">
     <nav class="navbar navbar-default" style="background-color: #404040">
         <div class="container-fluid">
 
             <!--                слева email            -->
-            <span class="navbar-text text-white" style="margin: auto 10px auto">
-                <strong id="login">username</strong>
+            <span class="navbar-text text-white" style="margin: auto 10px auto" id="userInfo">
+                <a><strong id="login"></strong></a>
                 <a>with roles: </a>
-                <a id="userRole">ADMIN</a>
+                <a id="userRoleHeader"></a>
              </span>
 
             <!--                кнопка выхода-->
