--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -199,7 +199,7 @@
                                                                     <b>ID</b>
                                                                     <input type="number"
                                                                            class="form-control"
-
+                                                                           name="id"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -210,6 +210,7 @@
                                                                 <div class="text-center">
                                                                     <b>First name</b>
                                                                     <input type="text"
+                                                                           name="firstname"
                                                                            class="form-control">
                                                                 </div>
                                                             </div>
@@ -220,6 +221,7 @@
                                                                 <div class="text-center">
                                                                     <b>Last name</b>
                                                                     <input type="text"
+                                                                           name="lastname"
                                                                            class="form-control">
                                                                 </div>
                                                             </div>
@@ -230,6 +232,7 @@
                                                                 <div class="text-center">
                                                                     <b>Age</b>
                                                                     <input type="number"
+                                                                           name="age"
                                                                            class="form-control">
                                                                 </div>
                                                             </div>
@@ -240,6 +243,7 @@
                                                                 <div class="text-center">
                                                                     <b>Username</b>
                                                                     <input type="text"
+                                                                           name="username"
                                                                            class="form-control">
                                                                 </div>
                                                             </div>
@@ -251,6 +255,7 @@
                                                                     <b>Password</b>
                                                                     <input type="text"
                                                                            class="form-control"
+                                                                           name="password"
                                                                            id="password">
                                                                 </div>
                                                             </div>
@@ -261,10 +266,9 @@
                                                                 <div class="text-center">
                                                                     <b>Role</b>
                                                                     <select multiple class="form-control" size="2"
-                                                                            name="role">
-                                                                        <option>
-
-                                                                        </option>
+                                                                            name="roles">
+                                                                        <option>ADMIN</option>
+                                                                        <option>USER</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
@@ -273,7 +277,7 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
-                                                                data-bs-dismiss="modal">Close
+                                                                data-bs-dismiss="modal" id="editCloseButton">Close
                                                         </button>
                                                         <button type="submit" class="btn btn-primary">Edit
                                                         </button>
@@ -403,12 +407,13 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script type="text/javascript" src="adminMainPage.js"></script>
+<script type="text/javascript" src="addNew.js"></script>
+<script type="text/javascript" src="editModal.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script type="text/javascript" src="adminPanel.js"></script>
-<script type="text/javascript" src="addNew.js"></script>
 
 </body>
 </html>
