--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -310,6 +310,7 @@
                                                                     <b>ID</b>
                                                                     <input type="number"
                                                                            class="form-control"
+                                                                           name="id"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -321,6 +322,7 @@
                                                                     <b>First name</b>
                                                                     <input type="text"
                                                                            class="form-control"
+                                                                           name="firstname"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -332,6 +334,7 @@
                                                                     <b>Last name</b>
                                                                     <input type="text"
                                                                            class="form-control"
+                                                                           name="lastname"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -343,6 +346,7 @@
                                                                     <b>Age</b>
                                                                     <input type="number"
                                                                            class="form-control"
+                                                                           name="age"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -354,6 +358,7 @@
                                                                     <b>Username</b>
                                                                     <input type="text"
                                                                            class="form-control"
+                                                                           name="username"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -365,6 +370,7 @@
                                                                     <b>Password</b>
                                                                     <input type="text"
                                                                            class="form-control"
+                                                                           name="password"
                                                                            readonly>
                                                                 </div>
                                                             </div>
@@ -375,8 +381,8 @@
                                                                 <div class="text-center">
                                                                     <b>Role</b>
                                                                     <select multiple class="form-control" size="2"
-                                                                            disabled>
-                                                                        <option>123</option>
+                                                                            disabled name="roles">
+                                                                        <!--                                                                        <option>123</option>-->
                                                                     </select>
                                                                 </div>
                                                             </div>
@@ -387,7 +393,8 @@
                                                         <button type="button" class="btn btn-secondary"
                                                                 data-bs-dismiss="modal">Close
                                                         </button>
-                                                        <button type="submit" class="btn btn-danger">Delete
+                                                        <button type="submit" class="btn btn-danger"
+                                                                id="deleteCloseButton">Delete
                                                         </button>
                                                     </div>
                                                 </div>
@@ -411,6 +418,7 @@
 <script type="text/javascript" src="adminMainPage.js"></script>
 <script type="text/javascript" src="addNew.js"></script>
 <script type="text/javascript" src="editModal.js"></script>
+<script type="text/javascript" src="deleteModal.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
