done with roles

--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -382,7 +382,8 @@
                                                                     <b>Role</b>
                                                                     <select multiple class="form-control" size="2"
                                                                             disabled name="roles" id="rolesDelete">
-                                                                        <!--                                                                        <option>123</option>-->
+                                                                        <option value="1">ADMIN</option>
+                                                                        <option value="2">USER</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
