--- a/src/main/resources/templates/admin/adminPanel.html
+++ b/src/main/resources/templates/admin/adminPanel.html
@@ -419,6 +419,7 @@
 <script type="text/javascript" src="addNew.js"></script>
 <script type="text/javascript" src="editModal.js"></script>
 <script type="text/javascript" src="deleteModal.js"></script>
+<script type="text/javascript" src="userInfoPage.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
